Added skeleton component system

--- a/frontend/src/routes/styles.css
+++ b/frontend/src/routes/styles.css
@@ -16,12 +16,7 @@
 	color: var(--color-text);
 }
 
-html {
-    background-color: rgba(27, 38, 54, 1);
-    text-align: center;
-    color: white;
-}
-
+html,
 body {
-    margin: 0;
+	@apply h-full overflow-hidden;
 }
